Some more unnecessary code removed.